feat: separate change password functionality into separate endpoint
